fixed style with collapse

--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,10 @@ body{
 .navbar-dark .navbar-nav .nav-link{
     color: #c1b7a9;
     font-size: 25px;
-    padding: 25px;
+    padding: 25px 35px;
     border: 1px solid #f1e3d1;
     transition: 1.5s;
+    border-top: 0;
 }
 
 .navbar-dark .navbar-nav .last:last-child {
@@ -47,7 +48,7 @@ body{
 }
 
 .nav-item {
-    margin-right: 35px;
+    margin-right: 0;
 }
 
 .hello {
@@ -170,11 +171,10 @@ i:hover {
 
 /*------------Collapse------------*/
 .cols {
-    margin-bottom: 250px;
+    margin: 80px 0;
 }
 
 .cols__but {
-    margin-top: 80px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -195,7 +195,7 @@ i:hover {
 
 .but__prim {
     margin: 3px 0;
-    width: 13%;
+    width: 70%;
     padding: 49px 0;
     color: #f1e3d1;
     font-size: 20px;
@@ -246,6 +246,7 @@ i:hover {
 
 .next {
     color: #86878b;
+    text-align: justify;
 }
 
 .animate__text__under {
@@ -489,7 +490,7 @@ input:focus ~ .highlight {
     }
 
     .cols__but {
-        margin-top: 80px;
+        margin-top: 10px;
         display: flex;
         justify-content: space-between;
         flex-direction: row;
@@ -505,6 +506,10 @@ input:focus ~ .highlight {
         flex-direction: column;
     }
 
+    .social__text {
+        margin: 10px 0;
+    }
+
     .form2 {
         padding: 50px 0;
         width: 100%;
@@ -514,6 +519,10 @@ input:focus ~ .highlight {
         align-items: center;
         display: flex;
         flex-direction: column;
+    }
+
+    .animate__maine{
+        margin-top: 10px;
     }
 
     /*---------formsecond----------*/
